# Orbitalik

./: .env.example  LICENSE  Makefile  docker-compose.yaml
common/go/: .gitignore  go.mod
common/go/http/middleware/: logging.go
common/go/log/: logger.go
config/alloy/: config.alloy
config/grafana/: datasources.yaml
config/prometheus/: prometheus.yml
db/init-sql/: create_databases.sql
db/migrations/tle/: 000001_create_tle_table.down.sql  000001_create_tle_table.up.sql
proto/: tle.proto  trajectory.proto
services/tle-ingestion-service/: .env.example  .golangci.yml  Dockerfile  Makefile  docker-compose.yaml  go.mod  go.sum
services/tle-ingestion-service/cmd/: main.go
services/trajectory-service/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  build.rs  docker-compose.yaml
services/trajectory-service/src/: main.rs
services/trajectory-service/src/astro/: consts.rs  look_angles.rs  mod.rs  models.rs  position.rs  propagator.rs  time.rs
services/trajectory-service/src/astro/coords/: ecef.rs  eci.rs  geodetic.rs
services/trajectory-service/src/domain/: errors.rs  models.rs
services/trajectory-service/src/infrastructure/: config.rs  logger.rs
services/trajectory-service/src/service/: look_angles.rs  mod.rs  position.rs
services/trajectory-service/src/transport/: mod.rs
services/trajectory-service/src/transport/adapter/: mod.rs  tle_client.rs
services/trajectory-service/src/transport/grpc/: converters.rs  interceptors.rs  mod.rs  server.rs  trajectory.rs
services/trajectory-service/src/transport/http/: routes.rs  server.rs
(+22 files in other folders)
