[package]
name = "trajectory-service"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
build = "build.rs"

[dependencies]
actix-web = "4.11.0"
actix-web-prom = "0.10.0"
chrono = "0.4.41"
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter", "time"] }
thiserror = "2.0.16"
tracing = "0.1.41"
sgp4 = "2.3.0"
uom = "0.37.0"
tonic = "0.14.1"
tonic-prost = "0.14.1"
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
http = "1.3.1"

[build-dependencies]
tonic-prost-build = "0.14.1"